--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@iconify/react": "^5.0.2",
     "@prisma/client": "^6.0.1",
     "accept-language": "^3.0.20",
+    "flowbite-react": "^0.10.2",
     "i18next": "^24.0.5",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-resources-to-backend": "^1.2.1",
@@ -22,7 +22,8 @@
     "react": "^19.0.0",
     "react-cookie": "^7.2.2",
     "react-dom": "^19.0.0",
-    "react-i18next": "^15.1.3"
+    "react-i18next": "^15.1.3",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
