--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-cookie": "^7.2.2",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.1.3",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "react-joyride": "^3.0.0-7"
   },
   "devDependencies": {
     "@types/node": "^20",
