--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start --port 52322",
     "lint": "next lint"
   },
   "dependencies": {
@@ -24,7 +24,8 @@
     "react-dom": "^19.0.0",
     "react-i18next": "^15.1.3",
     "react-icons": "^5.4.0",
-    "react-joyride": "^3.0.0-7"
+    "react-joyride": "^3.0.0-7",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/node": "^20",
