--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-resources-to-backend": "^1.2.1",
     "jose": "^5.9.6",
-    "next": "15.0.4",
+    "next": "^15.2.4",
     "nextjs-toploader": "^3.7.15",
     "prisma": "^6.0.1",
     "react": "^19.0.0",
