--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^6.0.1",
+    "@prisma/adapter-pg": "^7.1.0",
+    "@prisma/client": "^7.1.0",
     "accept-language": "^3.0.20",
     "flowbite-react": "^0.10.2",
     "i18next": "^25.7.1",
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-resources-to-backend": "^1.2.1",
     "jose": "^6.1.3",
-    "next": "^16.0.7",
+    "next": "^16.0.9",
     "nextjs-toploader": "^3.9.17",
     "prisma": "^7.1.0",
     "react": "^19.2.1",
